# ContextokenizeX

./: LICENSE  README.md  install.sh
contextokenizex/: CMakeLists.txt  CMakePresets.json  main.cpp
contextokenizex/core/: core.cpp  core.h  qcorebridge.cpp  qcorebridge.h
contextokenizex/filedlg/: readfile.cpp  readfile.h
contextokenizex/resources/: resources.qrc
contextokenizex/ui/: window.qml
contextokenizex/updater/: updater.cpp  updater.h
